--- a/JosetteArts/index.html
+++ b/JosetteArts/index.html
@@ -124,7 +124,9 @@
 		</div><!--section-1-->
 
 		<div class="section-2">
-
+			<div class="section-22">
+				<h2>Apresento a vocês uma pequena parte do meu trabalho</h2>
+			</div>
 			<div class="box">
 				<p>Fiquei sem palavras pela delicadeza em cada detalhe do trabalho da Josette Art's. Super recomendo!<br>- Amanda Dias.</p> 
 
