--- a/index.html
+++ b/index.html
@@ -139,9 +139,7 @@
 		<button class="btn-mostrar-projetos">Mostrar Mais</button>
 	</section>
 	<footer class="rodape">
-		<div class="roda">
-		<a href="https://www.linkedin.com/in/jo%C3%A3o-manoel-5432b119a/" target="_blank"><p>Projetado</p></a>
-		</div>
+		<a href="https://www.linkedin.com/in/jo%C3%A3o-manoel-5432b119a/" target="_blank"><p>Entre em contato com desenvolvedor</p></a>
 	</footer>
 <script src="./src/js/index.js"></script>
 </body>
