--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 			<p>Possuo mais de 5 anos de experiência no mercado de artesanato. Durante esse período, adquiri expertise significativa e me comprometi com a constante busca pelo aprimoramento. 😁</p>
 			<p>Meu foco principal está na produção de bebês orixás, uma peça delicada e única. Além disso, também confecciono bonecos(as) de feltro e uma variedade de enfeites para festas e decoração de ambientes, incluindo itens especialmente projetados para bebês. Estou dedicada a oferecer produtos de alta qualidade e design exclusivo para atender às necessidades e expectativas de nossos clientes corporativos.😁👍</p>
 			<ul class="redes-sociais">
-				<li><a href="https://www.linkedin.com/in/jo%C3%A3o-manoel-5432b119a/" title="ir para o linkedin" target="_blank"><i class="fab devicon-facebook-plain"></i></a></li> 
-				<a href="" title="Enviar mensagem whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
-				<li><a href="" title="Enviar mensagem Instagram" target="_blank"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="https://www.facebook.com/profile.php?id=100057514176833&mibextid=ZbWKwL" title="ir para o facebook" target="_blank"><i class="fab devicon-facebook-plain"></i></a></li> 
+				<a href="https://api.whatsapp.com/send/?phone=5521997624231&text=Josette+Art%27s%21+&type=phone_number&app_absent=0" title="Enviar mensagem whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+				<li><a href="https://www.instagram.com/josette.artsrj?igsh=MXd4ZDdqZ3o0ZGszcg==" title="Enviar mensagem Instagram" target="_blank"><i class="fab fa-instagram"></i></a></li>
 			</ul>
 		</div>
 		<div class="container-foto">
