--- a/index.html
+++ b/index.html
@@ -43,6 +43,23 @@
 		</div>
 	</section>
 
+	<section class="slike">
+		<div class="slide-center">
+			<div style="max-width: 700px;margin: 0 auto;overflow: hidden;" class="slider-container">
+				<img src="./src/images/amazon.jpg" />
+				<img src="./src/images/costco.jpg" />
+				<img src="./src/images/dominos.jpg" />
+				<img src="./src/images/uber.jpg" />
+				<img src="./src/images/walmart.jpg" />
+				<img src="./src/images/amazon.jpg" />
+				<img src="./src/images/costco.jpg" />
+				<img src="./src/images/dominos.jpg" />
+				<img src="./src/images/uber.jpg" />
+				<img src="./src/images/walmart.jpg" />
+			</div>
+			</div><!--center-->
+	</section>
+
 	<section class="projetos" id="projetos">
 		<h2 class="titulo"> Meus Projetos</h2>
 		
